@@ -1,7 +1,11 @@
+---
+ Source/WTF/wtf/Platform.h |    9 +++++++++
+ 1 file changed, 9 insertions(+)
+
 --- a/Source/WTF/wtf/Platform.h
 +++ b/Source/WTF/wtf/Platform.h
-@@ -65,6 +65,15 @@
- #define WTF_CPU_ALPHA 1
+@@ -71,6 +71,15 @@
+ #define WTF_CPU_BIG_ENDIAN 1
  #endif
  
 +/* CPU(HPPA) - HP PARISC */
